2008-08-11  Don Porter  <dgp@users.sourceforge.net>

	* library/http/http.tcl:	Bump http version to 2.7.1 to account
	* library/http/pkgIndex.tcl:	for [Bug 2046486] bug fix.  This
	* unix/Makefile.in:		release of http now requires a
	* win/Makefile.in:		dependency on Tcl 8.5 to be able to
	* win/makefile.bc:		use the unsigned formats in the
	* win/makefile.vc:		[binary scan] command.

2008-08-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/http/http.tcl: crc field from zlib data should be treated as
	unsigned for 64bit support [Bug 2046846]

2008-08-08  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.4 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.4 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.4 release.

2008-08-08  Kevin Kenny   <kennykb@acm.org>

	* library/tzdata/CET:
	* library/tzdata/MET:
	* library/tzdata/Africa/Casablanca:
	* library/tzdata/America/Eirunepe:
	* library/tzdata/America/Santarem:
	* library/tzdata/America/Rio_Branco:
	* library/tzdata/America/Argentina/San_Luis:
	* library/tzdata/Asia/Karachi:
	* library/tzdata/Europe/Belgrade:
	* library/tzdata/Europe/Berlin:
	* library/tzdata/Europe/Budapest:
	* library/tzdata/Europe/Sofia:
	* library/tzdata/Indian/Mauritius:  Olson's tzdata2008e.
	
2008-08-06  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclVar.c (TclLookupSimpleVar):  Retrieve the number of
	locals in the localCache from the CallFrame and not from the Proc
	which may have been mangled by a (broken?) recompile.  Backport
	from the HEAD.

2008-08-04  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclExecute.c:	Stopped faulty double-logging of errors to
	* tests/execute.test:	stack trace when a compile epoch bump triggers
	fallback to direct evaluation of commands in a compiled script.
	[Bug 2037338]

2008-07-30  Don Porter  <dgp@users.sourceforge.net>
